--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=RestAPI-Web-Service
 
 logging.level.org.springframework = info
+
+management.endpoints.web.exposure.include = *
+
+spring.datasource.url = jdbc:h2:mem:mymoodjdbc
+
+spring.jpa.defer-datasource-initialization = true
