--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ management.endpoints.web.exposure.include = *
 spring.datasource.url = jdbc:h2:mem:mymoodjdbc
 
 spring.jpa.defer-datasource-initialization = true
+
+spring.jpa.show-sql = true
