--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,30 @@ logging.level.org.springframework = info
 
 management.endpoints.web.exposure.include = *
 
-spring.datasource.url = jdbc:h2:mem:mymoodjdbc
+#spring.datasource.url = jdbc:h2:mem:mymoodjdbc
 
 spring.jpa.defer-datasource-initialization = true
 
 spring.jpa.show-sql = true
+
+spring.datasource.url = jdbc:mysql://localhost:3307/social-media-database
+spring.datasource.username = social-media-user
+spring.datasource.password = dummypassword
+
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+spring.security.user.name = username
+spring.security.user.password = dummy
+
+#docker run --detach 
+#--env MYSQL_ROOT_PASSWORD=dummypassword 
+#--env MYSQL_USER=social-media-user 
+#--env MYSQL_PASSWORD=dummypassword 
+#--env MYSQL_DATABASE=social-media-database 
+#--name mysql1
+#--publish 3307:3306 
+#mysql:8-oracle
+
+
